--- a/vignettes/dataRetrieval.Rnw
+++ b/vignettes/dataRetrieval.Rnw
@@ -81,53 +81,48 @@ knit_hooks$set(crop = hook_pdfcrop)
 The dataRetrieval package was created to simplify the process of getting hydrologic data in the R enviornment. It has been specifically designed to work seamlessly with the EGRET R package: Exploration and Graphics for RivEr Trends (EGRET). See: \url{https://github.com/USGS-R/EGRET/wiki} for information on EGRET. EGRET is designed to provide analysis of water quality data sets using the WRTDS method of data analysis (WRTDS is Weighted Regressions on Time, Discharge and Season) as well as analysis of discharge trends using robust time-series smoothing techniques.  Both of these capabilities provide both tabular and graphical analyses of long-term data sets.
 
 
-The dataRetrieval package is designed to retrieve many of the major data types of USGS hydrologic data that are available on the web, but also allows users to make use of other data that they supply from spreadsheets.  Section 2 provides examples of how one can obtain raw data from USGS sources on the web and ingest them into data frames within the R environment.  The functionality described in section 2 is for general use and is not tailored for the specific uses of the EGRET package.  The functionality described in section 3 is tailored specifically to obtaining input from the web and structuring them specifically for use in the EGRET package.  The functionality described in section 4 is for converting hydrologic data from user-supplied spreadsheets and structuring them specifically for use in the EGRET package.
+The dataRetrieval package is designed to retrieve many of the major data types of United States Geological Survey (USGS) hydrologic data that are available on the web, but also allows users to make use of other data that they supply from spreadsheets.  Section 2 provides examples of how one can obtain raw data from USGS sources on the web and ingest them into data frames within the R environment.  The functionality described in section 2 is for general use and is not tailored for the specific uses of the EGRET package.  The functionality described in section 3 is tailored specifically to obtaining input from the web and structuring them for use in the EGRET package.  The functionality described in section 4 is for converting hydrologic data from user-supplied spreadsheets and structuring them specifically for use in the EGRET package.
 
 For information on getting started in R and installing the package, see Appendix (\ref{sec:appendix1}): Getting Started.
 
-
-%------------------------------------------------------------
-\section{General USGS Web Retrievals}
-%------------------------------------------------------------ 
-In this section, we will run through 5 examples, documenting how to get raw data from the web. This includes site information (\ref{sec:usgsSite}), measured parameter information (\ref{sec:usgsParams}), historical daily values(\ref{sec:usgsDaily}), real-time (unit) values (\ref{sec:usgsRT}), and water quality data (\ref{sec:usgsWQP}) or (\ref{sec:usgsSTORET}). We will use the Choptank River near Greensboro, MD as an example.  The site-ID for this gage station is 01491000. Daily discharge measurements are available as far back as 1948.  Additionally, forms of nitrate have been measured dating back to 1964. The functions/examples in this section are for raw data retrieval.  This may or may not be the easiest data to work with.  In the next section, we will use functions that retrieve and process the data in a dataframe that may prove more friendly for R analysis.
-
-\newpage
-Quick workflow example:
-<<workflow, echo=TRUE,eval=TRUE>>=
+Quick workflow for major dataRetrieval functions:
+<<workflow, echo=TRUE,eval=FALSE>>=
 library(dataRetrieval)
 # Site ID for Choptank River near Greensboro, MD
 siteNumber <- "01491000" 
 ChoptankInfo <- getSiteFileData(siteNumber)
 parameterCd <- "00060"
+
+#Raw data:
 rawDailyData <- retrieveNWISData(siteNumber,parameterCd,
                       "1980-01-01","2010-01-01")
-head(rawDailyData)
+# Data compiled for EGRET analysis
 Daily <- getDVData(siteNumber,parameterCd,
                       "1980-01-01","2010-01-01")
-head(Daily)
-ChoptankInfo <- getSiteFileData(siteNumber)
-colnames(ChoptankInfo)
 
-ChoptankAvail <- getDataAvailability(siteNumber)
-head(ChoptankAvail)
+# Sample data Nitrate:
+parameterCd <- "00618"
+Sample <- getSampleData(siteNumber,parameterCd,
+                      "1980-01-01","2010-01-01")
 
-parameterCd <- "00618" # Nitrate
-parameterINFO <- getParameterInfo(parameterCd)
-colnames(parameterINFO)
+# Metadata on site and nitrate:
+INFO <- getMetaData(siteNumber,parameterCd)
+
+# Merge discharge and nitrate data to one dataframe:
+Sample <- mergeReport()
 
 @
 
-\newpage
 
-<<workflow2, echo=TRUE,eval=TRUE>>=
-ChoptankAvail <- getDataAvailability(siteNumber)
-head(ChoptankAvail)
-@
+%------------------------------------------------------------
+\section{General USGS Web Retrievals}
+%------------------------------------------------------------ 
+In this section, we will run through 5 examples, which document how to get raw data from the web. This includes site information (\ref{sec:usgsSite}), measured parameter information (\ref{sec:usgsParams}), historical daily values(\ref{sec:usgsDaily}), real-time (unit) values (\ref{sec:usgsRT}), and water quality data (\ref{sec:usgsWQP}) or (\ref{sec:usgsSTORET}). We will use the Choptank River near Greensboro, MD as an example.  The site-ID for this gage station is 01491000. Daily discharge measurements are available as far back as 1948.  Additionally, forms of nitrate have been measured dating back to 1964. The functions/examples in this section are for raw data retrieval.  In the next section, we will use functions that retrieve and process the data in a dataframe that may prove more friendly for R analysis, and specifically tailored to EGRET analysis.
 
 %------------------------------------------------------------
 \subsection{Introduction}
 %------------------------------------------------------------
-The United States Geological Survey organizes their hydrological data in standard structure.  Streamgages are located throughout the United States, and each streamgage has a unique ID.  Often (but not always), these ID's are 8 digits.  The first step to finding data is discoving this 8-digit ID. There are many ways to do this, one is the National Water Information System: Mapper \url{http://maps.waterdata.usgs.gov/mapper/index.html}.
+The USGS organizes their hydrological data in a standard structure.  Streamgages are located throughout the United States, and each streamgage has a unique ID.  Often (but not always), these ID's are 8 digits.  The first step to finding data is discoving this 8-digit ID. There are many ways to do this, one is the National Water Information System: Mapper \url{http://maps.waterdata.usgs.gov/mapper/index.html}.
 
 Once the site-ID is known, the next required input for USGS data retrievals is the 'parameter code'.  This is a 5-digit code that specifies what measured paramater is being requested.  A complete list of possible USGS parameter codes can be found at \url{http://go.usa.gov/bVDz}.
 
@@ -194,22 +189,15 @@ Site information is obtained from \url{http://waterservices.usgs.gov/rest/Site-T
 \subsubsection{getDataAvailability}
 \label{sec:usgsDataAvailability}
 %------------------------------------------------------------
-To find out the available data at a particular USGS site, including measured parameters, period of record, and number of samples (count), use the getDataAvailability function:
-
-<<getSiteAvailability, echo=TRUE>>=
-# Continuing from the previous example:
-ChoptankAvailableData <- getDataAvailability(siteNumber)
-head(ChoptankAvailableData)
-@
-
-There is an additional argument to the getDataAvailability called longNames, which defaults to FALSE. Setting longNames to TRUE will cause the function to make a web service call for each parameter and return expanded information on that parameter. Currently, this is a very slow process because each parameter code makes a unique web service call. If the site does not have many measured parameters, setting longNames to TRUE is reasonable.
-
-It is also possible to only request parameter information for a subset of variables. In the following example, we retrieve just the daily mean parameter information from the Choptank data availability dataframe (excluding all unit value and water quality values).
+To find out the available data at a particular USGS site, including measured parameters, period of record, and number of samples (count), use the getDataAvailability function. It is also possible to only request parameter information for a subset of variables. In the following example, we retrieve just the daily mean parameter information from the Choptank data availability dataframe (excluding all unit value and water quality values).
 
 
 <<getSiteExtended, echo=TRUE>>=
 # Continuing from the previous example:
 # This pulls out just the daily data:
+
+ChoptankAvailableData <- getDataAvailability(siteNumber)
+
 ChoptankDailyData <- subset(ChoptankAvailableData,
                             "dv" == service)
 
@@ -712,7 +700,29 @@ Data Type & EGRET Functions & Other Retrieval Functions \\
 \end{minipage}
 \end{table}
 
+\begin{table}[!ht]
+\begin{minipage}{\linewidth}
+\begin{center}
+\caption{dataRetrieval miscellaneous functions} 
+\begin{tabular}{ll}
+  \hline
+Function Name & Description \\ 
+  \hline
+  compressData &  Converts value/qualifier into ConcLow, ConcHigh, Uncen\\
+  getRDB1Data & Retrieves and converts RDB data to dataframe\\
+  getWaterML1Data & Retrieves and converts WaterML1 data to dataframe\\
+  getWaterML2Data & Retrieves and converts WaterML2 data to dataframe\\
+  mergeReport & Merges flow data from the daily record into the sample record\\
+  populateDateColumns & Generates Julian, Month, Day, DecYear, and MonthSeq columns\\
+  removeDuplicates & Removes duplicated rows\\
+  renameColumns & Renames columns from raw data retrievals\\
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}
+\end{table}
 
+\clearpage
 \appendix
 
 %------------------------------------------------------------ 
